--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,7 @@
     <connectionStrings>
         <add name="ConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\todolist.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
-        <add name="ConnectionString2" connectionString="Data Source=.\sqlexpress;Initial Catalog=TODOLIST_db;Integrated Security=True"
+        <add name="ConnectionString2" connectionString="workstation id=todolist.mssql.somee.com;packet size=4096;user id=mmmaher_SQLLogin_1;pwd=lxyyvppkc2;data source=todolist.mssql.somee.com;persist security info=False;initial catalog=todolist"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings>
